--- a/lolo surf/archivos HTML y CSS/CSS/contacto.css
+++ b/lolo surf/archivos HTML y CSS/CSS/contacto.css
@@ -1,7 +1,7 @@
 body{
     width: 100vw;
     height: 100vh;
-    background-image: url(../img/fondo\ contacto.jpg);
+    background-image: url(../../img/fondo\ contacto.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -39,32 +39,33 @@ body{
         text-align: center;
         margin-top: 20px;
         margin-left: 30px;
+        font-weight: bolder;
         
     }
     .form-group{
         border: 1px solid rgb(1, 4, 5);
         padding: 5px;
-        background-color: rgb(255, 248, 220, 0.35);
+        background-color: rgb(1, 4, 5, 0.6);
         display: flex;
         flex-direction: column;
         justify-content: center;
     }
     .form-group:hover{
-        border: 2px solid lightblue;
+        border: 2px solid rgb(1, 4, 5, 0.3);
     }
     .btn{
         text-transform: capitalize;
         background-color: rgb(1, 4, 5);
-        color: cornsilk;
-        border-color: lightblue;
+        color: white;
+        border-color: rgb(1, 4, 5);
     }
     .btn:hover{
         background-color: rgb(255, 248, 220, 0.35);
         color: rgb(1, 4, 5);
-        border-color: lightblue;
+        border-color: rgb(1, 4, 5);
     }
     .btn a{
-        color: cornsilk;
+        color: white;
         text-decoration: none;
     }
     .btn a:hover{
