--- a/lolo surf/archivos HTML y CSS/CSS/estilos.css
+++ b/lolo surf/archivos HTML y CSS/CSS/estilos.css
@@ -46,7 +46,7 @@ title{
     .sea{
         width: 100%;
         height: 500px;
-        background-image: url(../img/tortuga2.jpg);
+        background-image: url(../../img/tortuga2.jpg);
         background-position: center;
         background-size: cover;
         background-position-y: center;
@@ -56,7 +56,7 @@ title{
     .green{
         width: 100%;
         height: 500px;
-        background-image: url(../img/green4.jpg);
+        background-image: url(../../img/green4.jpg);
         background-position: center;
         background-size: cover;
         overflow: hidden;
@@ -105,28 +105,28 @@ title{
     .div1{
         width: 50%;
         height: 300px;
-        background-image: url(../img/foca.jpg);
+        background-image: url(../../img/foca.jpg);
         background-position: center;
         background-size: cover;
     }
     .div2{
         width: 50%;
         height: 300px;
-        background-image: url(../img/contaminacion.jpg);
+        background-image: url(../../img/contaminacion.jpg);
         background-position: center;
         background-size: cover;    
     }
     .div5{
         width: 50%;
         height: 300px;
-        background-image: url(../img/coral.jpg);
+        background-image: url(../../img/coral.jpg);
         background-position: center;
         background-size: cover;
     }
     .div6{
         width: 100%;
         height: 300px;
-        background-image: url(../img/maryvida.jpg);
+        background-image: url(../../img/maryvida.jpg);
         background-position: center;
         background-size: cover;
         background-position-y: -50px;
@@ -161,7 +161,7 @@ title{
     .div-nosotros{
         width: 100%;
         height: 400px;
-        background-image: url(../img/surflolo.jpg);
+        background-image: url(../../img/surflolo.jpg);
         background-position: center;
         background-size: cover;
         /*background-position-y: -250px;*/
@@ -199,7 +199,7 @@ title{
     .div1-lari{
         width: 100%;
         height: 400px;
-        background-image: url(../img/lariyyo.PNG);
+        background-image: url(../../img/lariyyo.PNG);
         background-position: center;
         background-size: cover;
         
@@ -207,7 +207,7 @@ title{
     .div2-lari{
         width: 100%;
         height: 400px;
-        background-image: url(../img/lariyyo2.jpg);
+        background-image: url(../../img/lariyyo2.jpg);
         background-position: center;
         background-size: cover;
     }
@@ -222,6 +222,13 @@ title{
         transition: 0.4s;
     }
     /*------------NOSOTROS--fin------------------*/
+    .linea{
+        background-color: white;
+        height: 1px;
+        width: 100vw;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        }
     /*------------footer------------------*/
     footer{
         background-color: rgb(1, 4, 5, 0.15);
