--- a/lolo surf/lolosurf.css
+++ b/lolo surf/lolosurf.css
@@ -201,9 +201,15 @@ body{
         transform: scale(1.1);
         transition: 1s;
         font-weight: lighter;
-        background-color: rgb(0, 0, 0, 0.15);
     }
     /*-----seccion green mood-----*/
+    .linea{
+        background-color: white;
+    height: 1px;
+    width: 100vw;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    }
     /*-----footer------------------*/
     footer{
         background-color: rgb(1, 4, 5, 0.15);
