--- a/lolo surf/archivos HTML y CSS/CSS/producto.css
+++ b/lolo surf/archivos HTML y CSS/CSS/producto.css
@@ -208,6 +208,7 @@ img:hover{
     border: 1px solid white;
     border-radius: 10px;
     font-size: 16px;
+    margin-bottom: auto;
 }
 .btnEliminar{
     width: 20px;
@@ -267,8 +268,8 @@ h1{
     
 }
 .card {
-    width: 300px;
-    height: 440px;
+    width: 400px;
+    height: 540px;
     margin-top: 5px;
     display: flex;
     flex-direction: column;
